# deploy-rs

./: Cargo.toml  flake.nix
src/: cli.rs  data.rs  deploy.rs  lib.rs  push.rs
