# SPDX-FileCopyrightText: 2020 Serokell <https://serokell.io/>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "deploy-rs"
version = "0.1.0"
authors = ["notgne2 <gen2@gen2.space>", "Serokell <hi@serokell.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7" , features = ["wrap_help", "derive"] }
dirs = "5.0.1"
flexi_logger = { version = "0.28", features = ["colors"], default_features = false }
futures-util = "0.3"
log = "0.4"
merge = "0.1.0"
notify = "6.1"
rnix = "0.11"
signal-hook = "0.3"
thiserror = "1.0"
tokio = { version = "1.38.0", features = [ "process", "macros", "sync", "rt-multi-thread", "fs", "time", "io-util" ] }
whoami = "1.5"
yn = "0.1"
rpassword = "7.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[lib]
name = "deploy"
path = "src/lib.rs"

[profile.release]
opt-level = 0
debug = "none"
strip = "symbols"
